# fastapi-mongodb

./: .gitignore  pyproject.toml
app/: main.py
app/controller/: api.py  products_controller.py
app/controller/v1/: products_controller.py
app/core/: config.py  database.py  security.py
app/models/: products_model.py  seccurity_models.py  user_model.py
app/service/: products_service.py
